--- a/findLandMine/src/main/frontend/src/App.css
+++ b/findLandMine/src/main/frontend/src/App.css
@@ -2,40 +2,10 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.button-3 {
+    background-color: rgb(255, 255, 128);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
 .button-0 {
     background-color: #81c147;
 }
@@ -50,4 +20,20 @@
 
 .table{
 	margin: auto;
+}
+
+.div-0{
+	display: inline-block;
+	background-color: #81c147;
+	border: 2px solid #81c147; 
+}
+.div-1{
+	display: inline-block;
+	background-color: #0080ff;
+	border: 2px solid #0080ff; 
+}
+.div-2{
+	display: inline-block;
+	background-color: #edacb1;
+	border: 2px solid #edacb1; 
 }
